--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
                         <div class="founder-card">
                             <div class="founder-avatar">SR</div>
                             <h3>Sushmith Reddy Kunta</h3>
-                            <p class="founder-title">Co-Founder</p>
+                            <p class="founder-title">Co-Founder & CEO</p>
                             <p class="founder-background">MS University of Texas Dallas<br>12+ years Construction & Operations</p>
                         </div>
                         <div class="founder-card">
                             <div class="founder-avatar">RA</div>
                             <h3>Raghu Ram Ambati</h3>
-                            <p class="founder-title">Co-Founder</p>
+                            <p class="founder-title">Co-Founder & COO</p>
                             <p class="founder-background">MBA IIM Bangalore<br>7+ years Product Management & Sales</p>
                         </div>
                     </div>
