--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <!-- Slide 1: Cover -->
         <div class="slide active" data-slide="0">
             <div class="slide-content cover-slide">
+                <div class="slide-number">Slide 1</div>
                 <div class="logo-section">
                     <div class="logo">
                         <div class="logo-icon">H</div>
@@ -53,6 +54,7 @@
         <!-- Slide 2: Problem -->
         <div class="slide" data-slide="1">
             <div class="slide-content">
+                <div class="slide-number">Slide 2</div>
                 <div class="slide-header">
                     <h2>Construction Procurement is Broken</h2>
                     <p>Builders face critical challenges that impact project timelines and profitability</p>
@@ -85,6 +87,7 @@
         <!-- Slide 3: Solution -->
         <div class="slide" data-slide="2">
             <div class="slide-content">
+                <div class="slide-number">Slide 3</div>
                 <div class="slide-header">
                     <h2>End-to-End Procurement Excellence</h2>
                     <p>Houzzdat transforms construction material procurement through technology and partnerships</p>
@@ -126,6 +129,7 @@
         <!-- Slide 4: Our Vision: India's Construction OS, Powered by Vertical AI -->
         <div class="slide" data-slide="3">
             <div class="slide-content">
+                <div class="slide-number">Slide 4</div>
                 <div class="slide-header">
                     <h2>Our Vision: India's Construction OS, Powered by Vertical AI</h2>
                 </div>
@@ -147,6 +151,7 @@
         <!-- Slide 5: Market Opportunity -->
         <div class="slide" data-slide="4">
             <div class="slide-content">
+                <div class="slide-number">Slide 5</div>
                 <div class="slide-header">
                     <h2>Massive & Growing Market</h2>
                     <p>India's construction materials market presents enormous opportunity</p>
@@ -196,6 +201,7 @@
         <!-- Slide 6: Product -->
         <div class="slide" data-slide="5">
             <div class="slide-content">
+                <div class="slide-number">Slide 6</div>
                 <div class="slide-header">
                     <h2>Platform Overview</h2>
                     <p>Comprehensive digital platform streamlining the entire procurement process</p>
@@ -248,6 +254,7 @@
         <!-- Slide 7: Business Model -->
         <div class="slide" data-slide="6">
             <div class="slide-content">
+                <div class="slide-number">Slide 7</div>
                 <div class="slide-header">
                     <h2>Multiple Revenue Streams</h2>
                     <p>Diversified revenue model with strong unit economics</p>
@@ -300,6 +307,7 @@
         <!-- Slide 8: Traction -->
         <div class="slide" data-slide="7">
             <div class="slide-content">
+                <div class="slide-number">Slide 8</div>
                 <div class="slide-header">
                     <h2>Strong Growth & Unit Economics</h2>
                     <p>Consistent quarter-over-quarter growth with improving margins</p>
@@ -340,6 +348,7 @@
         <!-- Slide 9: Financials -->
         <div class="slide" data-slide="8">
             <div class="slide-content">
+                <div class="slide-number">Slide 9</div>
                 <div class="slide-header">
                     <h2>Path to Profitability & Scale</h2>
                     <p>Strong financial trajectory with clear path to sustainable profitability</p>
@@ -414,6 +423,7 @@
         <!-- Slide 10: Go-to-Market -->
         <div class="slide" data-slide="9">
             <div class="slide-content">
+                <div class="slide-number">Slide 10</div>
                 <div class="slide-header">
                     <h2>Proven Customer Acquisition Strategy</h2>
                     <p>Multi-channel approach with strong customer conversion and retention</p>
@@ -456,6 +466,7 @@
         <!-- Slide 11: Team -->
         <div class="slide" data-slide="10">
             <div class="slide-content">
+                <div class="slide-number">Slide 11</div>
                 <div class="slide-header">
                     <h2>Experienced Leadership Team</h2>
                     <p>Domain expertise and proven track record in construction and technology</p>
@@ -496,6 +507,7 @@
         <!-- Slide 12: Funding Ask -->
         <div class="slide" data-slide="11">
             <div class="slide-content">
+                <div class="slide-number">Slide 12</div>
                 <div class="slide-header">
                     <h2>Funding to Scale Leadership Position</h2>
                     <p>Strategic investment to accelerate growth and market expansion</p>
@@ -557,6 +569,7 @@
         <!-- Slide 13: Vision & Roadmap -->
         <div class="slide" data-slide="12">
             <div class="slide-content">
+                <div class="slide-number">Slide 13</div>
                 <div class="slide-header">
                     <h2>Building India's Construction OS</h2>
                     <p>Roadmap to become the backbone of India's construction industry</p>
@@ -622,6 +635,7 @@
         <!-- Slide 14: AI-Powered Construction Commerce & Credit Infrastructure -->
         <div class="slide" data-slide="13">
             <div class="slide-content">
+                <div class="slide-number">Slide 14</div>
                 <div class="slide-header">
                     <h2>AI-Powered Construction Commerce &amp; Credit Infrastructure</h2>
                     <p>Bringing intelligence to procurement and construction credit</p>
